--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <title>Carousel</title>
 </head>
 <body>
+  <div class="container">
+    <div class="item-container">
+      <div class="item">
+        <img src="img/01.webp">
+      </div>
+
+    </div>
+  </div>
   
 
   <script src="js/main.js"></script>
