--- a/index.html
+++ b/index.html
@@ -9,11 +9,30 @@
 </head>
 <body>
   <div class="container">
-    <div class="item-container">
-      <div class="item">
-        <img src="img/01.webp">
-      </div>
+    <div class="slider">
 
+      <div class="item-container">
+        <div class="item">
+          <img src="img/01.webp">
+        </div>
+
+        <div class="item">
+          <img src="img/02.webp">
+        </div>
+
+        <div class="item">
+          <img src="img/03.webp">
+        </div>
+
+        <div class="item">
+          <img src="img/04.webp">
+        </div>
+
+        <div class="item">
+          <img src="img/05.webp">
+        </div>
+        
+      </div>
     </div>
   </div>
   
