--- a/index.html
+++ b/index.html
@@ -8,30 +8,17 @@
   <title>Carousel</title>
 </head>
 <body>
+  <!-- CONTENITORE GENERALE -->
   <div class="container">
     <div class="slider">
-
+      <!-- CONTENITORE IMMAGINI -->
       <div class="item-container">
-        <div class="item">
+        <div class="item active">
           <img src="img/01.webp">
         </div>
 
-        <div class="item">
-          <img src="img/02.webp">
-        </div>
-
-        <div class="item">
-          <img src="img/03.webp">
-        </div>
-
-        <div class="item">
-          <img src="img/04.webp">
-        </div>
-
-        <div class="item">
-          <img src="img/05.webp">
-        </div>
-        
+        <!-- BOTTONE NEXT -->
+        <div class="next"> &rarr; </div>
       </div>
     </div>
   </div>
