--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
       <!-- CONTENITORE IMMAGINI -->
       <div class="item-container">
-        <div class="item active">
-          <img src="img/01.webp">
+        <div class="item">
         </div>
 
         <!-- BOTTONE NEXT -->
