loop to determine

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
 
       <!-- CONTENITORE IMMAGINI -->
       <div class="item-container">
-        <div class="item">
-          
+        <div class="item active"> 
         </div>
 
         <!-- BOTTONE NEXT -->
