reset js need a different approach

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
       <!-- CONTENITORE IMMAGINI -->
       <div class="item-container">
-        <div class="item active"> 
+        <div class="item active">
         </div>
 
         <!-- BOTTONE NEXT -->
-        <div class="next"> &rarr; </div>
+        <div class="next"> &uarr; </div>
       </div>
     </div>
   </div>
