--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <!-- CONTENITORE IMMAGINI -->
       <div class="item-container">
-        <div class="item active">
+        <div class="item">
         </div>
 
         <!-- BOTTONE NEXT -->
