--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
   <div class="container">
 
     <!-- CONTENITORE IMMAGINI -->
-    <div class="item">
+    <div class="item-container">
+
+      <!-- BOTTONE NEXT e PREV -->
+      <div class="up"> &uarr; </div>
+      <div class="down"> &darr; </div>
     </div>
     
-    <!-- BOTTONE NEXT -->
-    <div class="next"> &uarr; </div>
   </div>  
 
   <script src="js/main.js"></script>
